
3.1.3
Features: 
Score will decrease a configurable amount on player death
Admins will now be notified when a plugin update is released on spigot

Bug Fixes: 
Fixed bug where team nametag was not removed when a player left the team (https://github.com/booksaw/BetterTeams/issues/22)
Fixed a bug where invites were not invalidated once a player joins a team (https://github.com/booksaw/BetterTeams/issues/23)

3.1.4
Improvements:
/team warp and /team delwarp now have tabcomplete for warp names
Formatting characters can be used around the teamname placeholder 

Bug Fixes: 
Players with team chatspy enabled no longer receive ally messages twice

3.1.5
Features: 
/teama disband to force a team to be disbanded (Note: there is no confirmation for this command)
/teama color to force a team to change their team color

3.1.6

Bug Fixes:
Fixed bug with chat colors not being correctly recognised

3.1.7
Features:
- Added chest claiming
Added commands:
- /team chest claim - Used to claim a given chest (betterteams.chest.claim) 
- /team chest remove - Used to remove a claim from a chest (betterteams.chest.remove)
- /team chest removeall - Used to remove all chest claims from that team (betterteams.chest.removeall)
Added admin commands:
- /teama chest claim <team> - Used to claim a chest for the given team (betterteams.admin.chest.claim)
- /teama chest remove - Used to remove the claim on the chest, regardless of team (betterteams.admin.chest.remove)
- /teama chest removeall <team> - Used to remove all (betterteams.admin.chest.removeall)

3.1.7:
Features: 


Improvements:


Bug Fixes: 
- /team neutral double message (https://github.com/booksaw/BetterTeams/issues/32)  
- Fixed multiple typos within messages.yml (https://github.com/booksaw/BetterTeams/issues/31)

TODO (any TODO which is not specifically code), mainly used for reminders to update documentation

Headings: 
Features: 


Improvements:


Bug Fixes: 
