@@ -163,7 +163,7 @@ Added admin commands:
 
 3.1.7:
 Features: 
-
+- Added new placeholder (%betterteams_teamscoreno_<rank>%) which can be used to display the score of the team at that position in the leaderboard
 
 Improvements:
 
@@ -171,6 +171,7 @@ Improvements:
 Bug Fixes: 
 - /team neutral double message (https://github.com/booksaw/BetterTeams/issues/32)  
 - Fixed multiple typos within messages.yml (https://github.com/booksaw/BetterTeams/issues/31)
+- Fixed problem where the placeholder (teamscore) was not working correctly
 
 TODO (any TODO which is not specifically code), mainly used for reminders to update documentation
 
